# PaperAccept-Agent

./: .env  .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  start-windows.bat  stop-windows.bat  简历-项目描述-PaperAccept-Agent.md
.cursor/rules/: Agent-Producter.mdc
app/: config.py  main.py
app/agent/paper/: __init__.py  condition_handler.py  graph.py  llm_utils.py  node_guard.py  reading_sanitize.py  schemas.py  state.py  write_subgraph.py
app/agent/paper/nodes/: __init__.py  error_finalize_node.py  reading_node.py  report_node.py  search_node.py  writing_execute_node.py  writing_plan_node.py  writing_reviewer_node.py
app/agent/paper/write/: __init__.py
app/agent/paper/write/agents/: __init__.py  execute_runner.py  global_reviewer_agent.py  plan_agent.py
app/api/: chat.py  file.py  health.py  paper.py
app/core/: llm_factory.py
app/models/: request.py
app/services/: chat_intent_router.py  chat_pre_pipeline.py  document_splitter_service.py  elasticsearch_chunk_store.py  long_term_memory_store.py  paper_search_confirm_gate.py  paper_search_confirm_registry.py  paper_search_query_refiner.py  paper_workflow_service.py  rag_agent_service.py  redis_session_store.py  upload_staging.py  vector_embedding_service.py  vector_index_service.py  vector_search_service.py  vector_store_manager.py
app/tools/: __init__.py  knowledge_tool.py  long_term_memory_tool.py  paper_arxiv_tool.py
app/utils/: hybrid_retrieval.py  log_preview.py  logger.py  paper_workflow_logging.py  rag_parent_expand.py  rag_recall_dump.py  rag_request_context.py  tenant_id.py
certs/: elasticsearch_local.pem
data/long_term_memory/: Agent.md  Memory.md  memory_meta.json
data/paper_workspaces/2026-04-05_1701/: readings.md  report.md
data/paper_workspaces/2026-04-06_1317/: report.md
data/paper_workspaces/2026-04-07_0040/: readings.md
data/paper_workspaces/2026-04-08_2139/: readings.md
data/paper_workspaces/2026-04-08_2143/: readings.md  report.md
docs/: rag_hybrid_recall_logging.md
docs/pdf_ab/: summary.csv  summary.md
docs/pdf_ab/docling/: 01-Systematic_Taxonomy_of_Security_Vulnerabilities_in_OpenClaw.md  02-ClawWorm_Self-Propagating_Attacks_Across_LLM_Agent_Ecosystems.md  03-From_Assistant_to_Double_Agent_OpenClaw_Benchmarking.md  04-Uncovering_Security_Threats_and_Architecting_Defenses_OpenClaw.md  06-ClawKeeper_Comprehensive_Safety_Protection_for_OpenClaw.md  test.md
docs/pdf_ab/pypdf/: 01-Systematic_Taxonomy_of_Security_Vulnerabilities_in_OpenClaw.md  02-ClawWorm_Self-Propagating_Attacks_Across_LLM_Agent_Ecosystems.md  03-From_Assistant_to_Double_Agent_OpenClaw_Benchmarking.md  04-Uncovering_Security_Threats_and_Architecting_Defenses_OpenClaw.md  06-ClawKeeper_Comprehensive_Safety_Protection_for_OpenClaw.md  test.md
docs/test_pdf_ab/: docling_test.md  pypdf_test.md  summary.json
docx/: rag_recall_runtime.md
scripts/: benchmark_pdf_parsers.py  dump_rag_recall.py  paper_arxiv_smoke.py  paper_search_from_prompt.py  test_elasticsearch_connection.py  test_milvus_connection.py  test_openrouter_chat.py  test_openrouter_embedding.py  test_pdf_embed_local.py  test_redis_session_store.py  test_single_pdf_ab.py
static/: app.js  index.html  styles.css
tests/: test_chat_intent_router.py  test_paper_condition_handler.py  test_paper_search_confirm_gate.py  test_paper_search_query_refiner.py  test_paper_workflow_e2e.py  test_paper_workflow_live.py  test_paper_workspace_naming.py  test_upload_tenant_guard.py
